kubernetes/statics application/nginx-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-namespace
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  externalTrafficPolicy: Local
  loadBalancerSourceRanges:
  - 0.0.0.0/0
