kubernetes/statics application/nginx-ingress.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-service
#  namespace: nginx-namespace
#spec:
#  type: LoadBalancer
#  selector:
#    app: nginx
#  ports:
#  - name: http
#    port: 80
#    targetPort: 80
#  externalTrafficPolicy: Local
#  loadBalancerSourceRanges:
#  - 0.0.0.0/0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /statics
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              name: http
